--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://images.unsplash.com/photo-1546365243-9af28be22b5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" alt="">
     </div>
     
-    <div class="text"> BABU <br> HAKIZIMANA </div>
+    <div class="text"> Jeg er BABU <br> HAKIZIMANA </div>
 
 
     </div>
