--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="maindiv">
 
     <h2 class="h2"> I AM NOT IN DANGER <br>
-        I AM THER DANGER <br>
+        I AM THE DANGER <br>
 
         <span> PROJECT FRONT-END DEVELOPER BY </span>
 
